# Eve

./: .gitignore  AGENTS.md  Eve.csproj  Program.cs  README.md
Data/: AudioDataset.cs  AudioTokenizer.cs  SyntheticDataGenerator.cs
Eve.Native/: CMakeLists.txt  EveNative.cs
Eve.Native/include/: eve_native.h
Eve.Native/src/: eve_native.cpp
Models/: AudioTransformer.cs  VQVAE.cs
Native/: EveNative.cs
Training/: Trainer.cs
Utils/: AudioIO.cs  Config.cs  STFT.cs
